@@ -47,20 +47,15 @@ void summonCommandsInit()
     
     // global commands
     RegisterScriptCommand(GetWindowsCommand)    g()
-    //RegisterScriptCommand(GetWindowCommand)     g()
-    //RegisterScriptCommand(SetWindowCommand)     g() gl()    
     RegisterScriptCommand(NewWindowCommand)     g() gl()
     RegisterScriptCommand(CloseWindowCommand)   g() gl()
     RegisterScriptCommand(GetModelsCommand)     g()
-    //RegisterScriptCommand(GetModelCommand)      g()
-    //RegisterScriptCommand(SetModelCommand)      g()    
     RegisterScriptCommand(NewModelCommand)      g()
     RegisterScriptCommand(AssignModelCommand)   g()
     RegisterScriptCommand(DelModelCommand)      g()
     RegisterScriptCommand(TimerCallCommand)     g()
     RegisterScriptCommand(RedrawCallCommand)    g()
     RegisterScriptCommand(VersionCommand)       g()
-    //RegisterScriptCommand(QuitCommand)          g()
     
     // model commands
     RegisterScriptCommand(AddGroupCommand)      m() gl()
